--- a/lesson1/3.html
+++ b/lesson1/3.html
@@ -16,7 +16,7 @@ console.log (10 + 10 + +"10"); //30 - 10 число + плюс 10 число +
 // выполнение преобразования из строки в число +плюс число 10
 console.log (10 / -"");  // -Infinity Похоже, что это показатель неопределенности, связанного с операцией
 //деления на отрицательное пустое строчное значение, то есть отсутствующее числовое значение
-console.log (10 / +"2,5"); // NaN ну как я понялa не смог сроку в число преобразовать из-за дроби
+console.log (10 / +"2,5"); // NaN ну как я понялa не смог сроку в число преобразовать из-за дроби.
 
 
 
